src/objects/BloodSpecimenForm__c.object
<CustomObject>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>BloodSpecimenForms</relationshipLabel>
        <relationshipName>BloodSpecimenForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CollectionDate__c</fullName>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consented_to_use_specimen_study__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient consented to use specimen for this study</inlineHelpText>
        <label>Consented to use specimen study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contented_specimen_outside_study__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient consented to use specimen for research outside of this study</inlineHelpText>
        <label>Contented specimen outside study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>BloodSpecimenForm__c</referenceTo>
        <relationshipLabel>BloodSpecimenForms</relationshipLabel>
        <relationshipName>BloodSpecimenForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Reason_samples_not_shipped__c</fullName>
        <label>Other (Reason samples not shipped)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_all_samples_not_collected__c</fullName>
        <label>Reason all samples not collected</label>
        <picklist>
            <picklistValues>
                <fullName>Patient refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestHarnessId__c</fullName>
        <externalId>true</externalId>
        <label>TestHarnessId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Point__c</fullName>
        <label>Time Point</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-regimen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Surgery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>BloodSpecimenForms</relationshipLabel>
        <relationshipName>BloodSpecimenForms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>caTissue_Specimen_Status__c</fullName>
        <label>caTissue Specimen Status</label>
        <picklist>
            <picklistValues>
                <fullName>Specimens not created yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Specimens creation successful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pg_bloodspecimenform_Id__c</fullName>
        <label>pg_bloodspecimenform_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>BloodSpecimenForm</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BloodSpecimenForms</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Collection_date_cannot_be_future_date</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>CollectionDate__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>CollectionDate__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
</CustomObject>